@@ -1,3 +1,7 @@
+##
+#path.hybridbackforward.enable = 1
+#path.hybridbackforward.partition = 0.0
+##
 film.width = 640
 film.height = 480
 ##
@@ -51,10 +55,10 @@ biaspath.sampling.specular.size = 5
 biaspath.pathdepth.specular = 4
 ##
 sampler.type = SOBOL
-sampler.sobol.adaptive.strength = 0.95
-batch.haltthreshold = 0.001
-batch.haltthreshold.warmup = 16
-batch.haltthreshold.step = 16
+#sampler.sobol.adaptive.strength = 0.95
+#batch.haltthreshold = 0.001
+#batch.haltthreshold.warmup = 16
+#batch.haltthreshold.step = 16
 ##
 # Film image pipeline plug-ins
 film.imagepipelines.0.0.type = GAMMA_CORRECTION
