@@ -12,14 +12,14 @@ scene.volumes.volglass.ior = 1.45
 scene.materials.shell.type = disney
 scene.materials.shell.basecolor = 0.6 0.0 0.0
 ##
-#scene.materials.shell.metallic = 0.5
-#scene.materials.shell.roughness = 0.1
+scene.materials.shell.metallic = 1.0
+scene.materials.shell.roughness = 0.1
 ##
 #scene.materials.shell.subsurface = 0.5
 ##
-scene.materials.shell.specular = 0.5
-scene.materials.shell.roughness = 0.2
-scene.materials.shell.clearcoatgloss = 1.0
+#scene.materials.shell.specular = 0.5
+#scene.materials.shell.roughness = 0.2
+#scene.materials.shell.clearcoatgloss = 1.0
 ##
 scene.materials.whitematte.type = matte
 scene.materials.whitematte.kd = 0.75 0.75 0.75
@@ -39,6 +39,9 @@ scene.materials.whitelight.visibility.indirect.specular.enable = 1
 ################################################################################
 scene.objects.room.ply = scenes/luxball/room.ply
 scene.objects.room.material = whitematte
+#scene.objects.room.ply = scenes/luxball/room-nowall.ply
+#scene.objects.room.material = whitematte
+##
 scene.objects.luxinner.ply = scenes/luxball/luxball-inner.ply
 scene.objects.luxinner.material = whitematte
 scene.objects.luxtext.ply = scenes/luxball/luxball-text.ply
@@ -51,3 +54,10 @@ scene.objects.l1.ply = scenes/luxball/luxball-light1.ply
 scene.objects.l1.material = whitelight
 scene.objects.l2.ply = scenes/luxball/luxball-light2.ply
 scene.objects.l2.material = whitelight
+################################################################################
+#scene.lights.infinitelight.type = infinite
+##scene.lights.infinitelight.file = scenes/simple-mat/sky.exr
+#scene.lights.infinitelight.file = scenes/simple-mat/arch.exr
+#scene.lights.infinitelight.gamma = 1.0
+#scene.lights.infinitelight.gain = 3.0 3.0 3.0
+#scene.lights.infinitelight.storage = byte
